# recommendation_toolkit

./: .README.md.un~  .gitattributes  .gitignore  README.md  pyproject.toml
models/: Pretrained.py  Recommend.py
models/embeddings/: alias.py  embedding_models.py
models/recommendations_model/: DeepFM.py  NeuCF.py
params/: Itemembeddings_params.json  RECOMMEND.env  UserEmbeddings.env  model_params.json
